<resources>
    <string name="app_name">WhereIPark</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>

    <!--User Home Strings-->
    <string name="title_activity_user">User Home</string>
    <string name="Hi">Hi</string>
    <string name="actPark">Your car is parked in: </string>
    <string name="timePark">Time left until your park expires:  </string>
    <string name="freqPark">You park most frequently in: </string>
    <string name="title_activity_user_home">UserHome</string>

    <!--AddParking-->
    <string name="expire">Set an expire hour</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_add_park">Register your parking</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="server_client_id">161283119338-5terma06sm8p9sfb4o3p7u3bi8n08vnl.apps.googleusercontent.com</string>
</resources>
